--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,8 +3,15 @@ Django==5.0.2
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
-pillow==10.2.0
+Pillow==10.1.0
 PyJWT==2.8.0
 pytz==2024.1
 sqlparse==0.4.4
 tzdata==2024.1
+crispy-bootstrap5==2023.10
+dj_database_url
+django-crispy-forms==2.1
+Gunicorn
+Pillow==10.1.0
+psycopg2
+whitenoise
