--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,21 @@
+# mysqlclient==2.1.1
+# webencodings==0.5.1
 asgiref==3.7.2
-Django==5.0.2
-django-cors-headers==4.3.1
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.1
+crispy-bootstrap5==2023.10
 dj_database_url
+django-cors-headers==4.3.1
 django-crispy-forms==2.1
+django-environ==0.9.0
+django-js-asset==1.2.2
+Django==5.0.2
+djangorestframework-simplejwt==5.3.1
+djangorestframework==3.14.0
+Gunicorn
 Pillow==10.1.0
+psycopg==3.1.18
 PyJWT==2.8.0
 pytz==2024.1
 sqlparse==0.4.4
 tzdata==2024.1
-crispy-bootstrap5==2023.10
-dj_database_url
-django-crispy-forms==2.1
-Gunicorn
+virtualenv==20.10.0
 whitenoise
